# markpact

./: .bumpversion.toml  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  markpact.config.json  project.functions.toon  project.toon  pyproject.toml
docs/: README.md  ci-cd.md  contract.md  generator.md  llm.md  publishing.md
examples/: README.md
examples/cli-tool/: README.md
examples/docker-publish/: README.md
examples/electron-desktop/: README.md
examples/fastapi-todo/: README.md
examples/flask-blog/: README.md
examples/go-http-api/: README.md
examples/kivy-mobile/: README.md
examples/markdown-converter/: README.md  sample.md
examples/node-express-api/: README.md
examples/notebook-converter/: README.md  sample.Rmd  sample.dib  sample.ipynb  sample.qmd  sample.zpln
examples/npm-publish/: README.md
examples/php-cli/: README.md
examples/pypi-publish/: README.md
examples/python-typer-cli/: README.md
examples/react-typescript-spa/: README.md
examples/rust-axum-api/: README.md
examples/static-frontend/: README.md
examples/streamlit-dashboard/: README.md
examples/typescript-node-api/: README.md
scripts/: test_examples.sh
src/markpact/: __init__.py  auto_fix.py  cli.py  config.py  converter.py  docker_runner.py  generator.py  notebook_converter.py  parser.py  publisher.py  runner.py  sandbox.py  tester.py
tests/: test_cli.py  test_converter.py  test_examples.py  test_generator.py  test_notebook_converter.py  test_parser.py  test_runner.py  test_sandbox.py
url-test/: README.md
