[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markpact"
version = "0.1.4"
description = "Executable Markdown Runtime – run projects from README.md"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "wronai" }]
keywords = ["markdown", "executable", "readme", "runtime", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "build",
    "twine",
    "bump2version>=1.0",
]

[project.scripts]
markpact = "markpact.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/markpact"
Repository = "https://github.com/wronai/markpact"
Issues = "https://github.com/wronai/markpact/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markpact"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
